# QU.I.R.K

./: .dockerignore  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  INTELLIGENCE.md  LICENSE  README.md  RESTRUCTURE-AUDIT-2026-03-31.md  SECURITY.md  SECURITY_CHECKLIST.txt  config.yaml  lab-registry.yaml  pyproject.toml  run_scan.py  uat-auto-results.json  uat_runner.py
.github/workflows/: dashboard-quality.yml  python-ci.yml  python-staleness.yml  release-container.yml  release.yml
.planning/: .continue-here.md  HANDOFF.json  HORIZON.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v3.9-MILESTONE-AUDIT.md  v4.1-MILESTONE-AUDIT.md  v4.10-MILESTONE-AUDIT.md  v4.2-MILESTONE-AUDIT.md  v4.3-MILESTONE-AUDIT.md  v4.7-MILESTONE-AUDIT.md  v5.0-MILESTONE-AUDIT.md  v5.1-MILESTONE-AUDIT.md  v5.4-MILESTONE-AUDIT.md  v5.4-deferred-uat.md
.planning/archive/: HANDOFF-2026-04-27-phase32-pre-pivot.json
.planning/audit-2026-05-08/: AUDIT-SUMMARY.md  AUDIT-TASKS.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: sensor-enroll-id-mismatch.md
.planning/milestones/: v3.9-MILESTONE-AUDIT.md  v3.9-REQUIREMENTS.md  v3.9-ROADMAP.md  v4.1-REQUIREMENTS.md  v4.1-ROADMAP.md  v4.10-REQUIREMENTS.md  v4.10-ROADMAP.md  v4.10.1-REQUIREMENTS.md  v4.10.1-ROADMAP.md  v4.2-MILESTONE-AUDIT.md  v4.2-REQUIREMENTS.md  v4.2-ROADMAP.md  v4.3-MILESTONE-AUDIT.md  v4.3-REQUIREMENTS.md  v4.3-ROADMAP.md  v4.4-REQUIREMENTS.md  v4.4-ROADMAP.md  v4.5-REQUIREMENTS.md  v4.5-ROADMAP.md  v4.6-MILESTONE-AUDIT.md  v4.6-REQUIREMENTS.md  v4.6-ROADMAP.md  v4.8-REQUIREMENTS.md  v4.8-ROADMAP.md  v4.9-MILESTONE-AUDIT.md  v4.9-REQUIREMENTS.md  v4.9-ROADMAP.md  v5.0-REQUIREMENTS.md  v5.1-ROADMAP.md  v5.2-MILESTONE-AUDIT.md  v5.2-REQUIREMENTS.md  v5.2-ROADMAP.md  v5.3-MILESTONE-AUDIT.md  (+5 more)
Formula/: quirk.rb
Ghost_Weight/: .env.example  .gitignore  CLAUDE.md  ROADMAP.md  TASK_LIST.md  docker-compose.siem.yml  docker-compose.yml
QuRisk/: config.yaml  run_scan.py
changelog.d/: README.md  v4.10.1.bugfix.md  v4.10.feature.md
data/: qcscan.sqlite
deploy/: README.md  cloud-init.yaml  console.env.example
docs/: QUIRK_UAT_Populated.xlsx  UAT-SERIES.md  architecture-distributed.md  architecture.md  cbom-classifier-coverage.md  cbom-guide.md  chaos-lab.md  configuration.md  dead-code-candidates.md  deployment-cloud-console.md  error-codes.md  getting-started.md  installation.md  intelligence-schema.md  operators-guide.md  quirk-overview.md  release-process.md  report-interpretation.md  sample-config.yaml  timeout-retry-audit.md  upgrade-guide.md  windows-packaging-spike.md
examples/: README.md
output/: assessment-20260218-214038.json  assessment-20260219-200413.json  assessment-20260219-201000.json  assessment-20260219-201232.json  assessment-20260219-205233.json  assessment-20260220-010025.json  assessment-20260220-012548.json  assessment-20260220-020407.json  assessment-20260220-050529.json  assessment-20260223-040006.json  assessment-20260223-040030.json  assessment-20260223-042413.json  assessment-20260223-042823.json  assessment-20260223-042859.json  assessment-20260223-050837.json  assessment-20260223-051942.json  assessment-20260223-053244.json  assessment-20260223-053448.json  calibration-20260223-040006.json  calibration-20260223-053244.json  calibration-20260223-053448.json  delta-20260223-051942.json  delta-20260223-051942.md  executive-summary-20260218-214038.md  executive-summary-20260219-200413.md  executive-summary-20260219-201000.md  executive-summary-20260219-201232.md  executive-summary-20260219-205233.md  executive-summary-20260220-010025.md  executive-summary-20260220-012548.md  executive-summary-20260220-020407.md  executive-summary-20260220-050529.md  executive-summary-20260223-040030.md  executive-summary-20260223-042413.md  executive-summary-20260223-042823.md  executive-summary-20260223-050837.md  executive-summary-20260223-051942.md  executive-summary-20260223-053244.md  executive-summary-20260223-053448.md  findings-20260218-214038.json  (+70 more)
qcscan/: config.py  db.py  interactive.py  models.py  validate.py
quantum-chaos-enterprise-lab/: .env  CHAOS_LAB_BUILD_AND_OPERATIONS.md  CHAOS_LAB_BUILD_AND_OPERATIONS_text_only.md  README.md  docker-compose.distributed.yml  docker-compose.yml  expected_results_distributed.md  expected_results_hwcompat.md  expected_results_v3.md  expected_results_v4.md  lab.sh  sensor-config-b.yaml  sensor-config.yaml  sensor.Dockerfile  uat-targets-86.txt
quantum-crypto-scanner/: requirements.txt  run_scan.py
quirk/: __init__.py  config.py  config_template.yaml  db.py  errors.py  interactive.py  logging_util.py  models.py  validate.py
scripts/: check-bundle-freshness.sh  check-cancelled-guards.sh  fetch_cmvp_curation.py  generate_cbom_fixtures.sh  post-go-public-protect.sh
tests/: _cbom_profiles.py  conftest.py  skip_registry.py  test_132_cover_page.py  test_132_csp_and_auth.py  test_adcs_ast_gate.py  test_adcs_no_writes.py  test_adcs_scanner.py  test_analyze_token.py  test_api_auth.py  test_api_qramm_hardening.py  test_api_scan_window.py  test_apply_security_cli_overrides.py  test_audit_ledger_zero_open.py  test_auto_merge_trigger.py  test_aws_connector.py  test_azure_blob.py  test_azure_keyvault.py  test_banner_comment_corrected.py  test_broker_config_and_profile.py  test_broker_db_schema.py  test_broker_run_integration.py  test_broker_scanner_kafka.py  test_broker_scanner_rabbitmq.py  test_broker_scanner_redis.py  test_cache.py  test_cbom_bridge_detection.py  test_cbom_builder.py  test_cbom_builder_algo_hints.py  test_cbom_builder_ssh_json_error.py  test_cbom_classifier.py  test_cbom_classifier_coverage.py  test_cbom_coverage.py  test_cbom_integration.py  test_cbom_motion_endpoints.py  test_cbom_motion_golden.py  test_cbom_pass4_hardware.py  test_cbom_rest_fuzz_no_tls_component.py  test_cbom_scan_route.py  test_cbom_schema_validation.py  (+289 more)
tmp/: sample-scorecard-config.yaml
(+2499 files in other folders)
