[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quirk-scanner"
version = "5.0.0"
description = "QU.I.R.K. -- Quantum Infrastructure Readiness Kit"
requires-python = ">=3.10"
license = {text = "Proprietary"}
dependencies = [
    "PyYAML>=6.0",
    "cryptography>=44.0",
    "SQLAlchemy>=2.0",
    "tqdm>=4.67",
    "cyclonedx-python-lib[json-validation]>=11.7.0,<12",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "PyJWT>=2.12.0",
    "python-jose>=3.5.0",
    "boto3>=1.42.0",
    "azure-identity>=1.25.0",
    "azure-keyvault-certificates>=4.10.0",
    "azure-keyvault-keys>=4.11.0",
    "azure-mgmt-network>=30.2.0",
    "dnspython[dnssec]>=2.8.0",
    "lxml>=6.0",
    "beautifulsoup4>=4.13.0",
    "signxml>=4.4.0",
    "nh3>=0.2.17",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.128.8",
    "uvicorn[standard]>=0.39.0",
    "python-multipart>=0.0.20",
    "playwright>=1.58.0",
    "croniter>=1.4.0",
    "pypdf>=4.0",  # Phase 78 / HARDEN-04: PDF metadata verification (test-only)
]
identity = [
    "impacket>=0.13.0,<0.14",
    "ldap3>=2.9.1",
]
# Phase 80 ADCS-07: dedicated extras group for the AD CS scanner. Lists ONLY
# ldap3 (NOT impacket) so that quirk[adcs] can safely be included in [all]
# without re-introducing the pyOpenSSL/cryptography downgrade chain that
# quirk[identity] would. tests/test_install_all_excludes_impacket.py guards
# this invariant. cryptography is already a core dep (>=44.0); Plan 80-04
# adds a CI matrix asserting the floor across [adcs] + [all] combinations.
adcs = [
    "ldap3>=2.9.1",
]
# Phase 94 SPEC-01/02/03 / PKG-01: [api] extras group for OpenAPI spec scanning.
# [api] is INTENTIONALLY EXCLUDED from [all] — quirk[api] must never appear in [all]
# because schemathesis (active REST fuzzer) requires explicit operator opt-in and the
# CI guard (tests/test_install_all_excludes_schemathesis.py) enforces this boundary.
# Do NOT add quirk[api] to [all].
api = [
    "openapi-spec-validator>=0.9.0",
    "schemathesis>=4.4.4",   # Phase 96 FUZZ-01 — active REST fuzzing engine; [api] only, NOT [all] (v5.1-D-05)
]
cloud = [
    "google-api-python-client>=2.0.0",
    "google-auth>=2.36.0",
    "azure-mgmt-storage>=21.0.0",      # Phase 28: Azure Blob encryption audit (STOR-02)
    "kubernetes>=35.0.0",              # Phase 29: Kubernetes secrets inspection (K8S-01, K8S-02)
    "google-cloud-container>=2.0.0",   # Phase 29: GKE databaseEncryption.state (K8S-01)
    "azure-mgmt-containerservice>=35.0.0",  # Phase 29: AKS Key Vault KMS detection (K8S-01)
    "hvac>=2.4.0",                     # Phase 30: HashiCorp Vault connector (VAULT-01/02/03)
]
db = [
    "psycopg2-binary>=2.9.0",
    "PyMySQL>=1.1.0",
]
motion = ["quirk-scanner[email]", "quirk-scanner[broker]", "quirk-scanner[kafka]"]
email = []
broker = ["redis>=5.0"]
kafka = ["kafka-python>=2.0"]
redis = ["redis>=5.0"]
cbom = ["cyclonedx-python-lib[json-validation]>=11.7.0,<12"]
docx = [
    "python-docx>=1.1.0",
]
dev = [
    "towncrier>=24.7.0",
]
all = [
    "quirk-scanner[cloud]",
    "quirk-scanner[cbom]",
    "quirk-scanner[db]",
    "quirk-scanner[motion]",
    "quirk-scanner[redis]",
    "quirk-scanner[dashboard]",
    "quirk-scanner[adcs]",  # Phase 80 ADCS-07 — ldap3-only, no impacket
    "quirk-scanner[docx]",  # Phase 100 / FMT-03: DOCX auto-emits every run; bundle with full installs
]
# NOTE: quirk[identity] is INTENTIONALLY EXCLUDED from [all] -- impacket
# transitively pulls pyOpenSSL which downgrades cryptography and breaks the
# TLS scanner. See Phase 45 / D-01. tests/test_install_all_excludes_impacket.py
# guards this; do NOT add quirk[identity] to the list above.

[project.scripts]
quirk = "run_scan:_run_main_with_job_guard"

[tool.setuptools.packages.find]
include = ["quirk*"]

[tool.setuptools]
py-modules = ["run_scan"]

[tool.setuptools.package-data]
quirk = ["reports/templates/*.j2", "config_template.yaml", "dashboard/static/**/*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "live_infra: marks tests requiring live external infrastructure (Docker/cloud/etc)",
]
addopts = "-m 'not slow'"
testpaths = ["tests"]
pythonpath = ["."]

# RELENG-04 (Phase 84-02): towncrier CHANGELOG automation.
# Per-PR fragments live under changelog.d/<id>.<kind>.md. At release time:
#   towncrier build --version X.Y.Z --yes
# consumes fragments and prepends a rendered section above the
# `<!-- towncrier release notes start -->` marker in CHANGELOG.md.
[tool.towncrier]
package = "quirk"
directory = "changelog.d"
filename = "CHANGELOG.md"
title_format = "## [{version}] - {project_date}"
start_string = "<!-- towncrier release notes start -->\n"

[[tool.towncrier.type]]
directory = "feature"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = false
